--- a/tests/Euclid.Composite.InputModelMapping/packages.config
+++ b/tests/Euclid.Composite.InputModelMapping/packages.config
@@ -7,4 +7,5 @@
   <package id="NHibernate" version="3.2.0.4000" />
   <package id="FluentNHibernate" version="1.3.0.717" />
   <package id="Castle.Core" version="2.5.2" />
+  <package id="Moq" version="4.0.10827" />
 </packages>
