minor work on the composite inspector; it'll have to be substantially modified to do what i want so i am punting for now

--- a/src/sdk/CompositeInspector/CompositeInspector.csproj
+++ b/src/sdk/CompositeInspector/CompositeInspector.csproj
@@ -201,6 +201,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <EmbeddedResource Include="Views\Shared\Scripts.cshtml" />
+    <EmbeddedResource Include="Views\Shared\Styles.cshtml" />
     <None Include="web.config" />
   </ItemGroup>
   <ItemGroup>
