--- a/tests/Euclid.Composite.InputModelMapping/packages.config
+++ b/tests/Euclid.Composite.InputModelMapping/packages.config
@@ -8,4 +8,5 @@
   <package id="FluentNHibernate" version="1.3.0.717" />
   <package id="Castle.Core" version="2.5.2" />
   <package id="Moq" version="4.0.10827" />
+  <package id="Castle.Windsor" version="2.5.3" />
 </packages>
