rough draft of forum controllers complete; disabled glimpse logging and removed the log file from .gitignore

--- a/apps/ForumComposite/Web.config
+++ b/apps/ForumComposite/Web.config
@@ -66,5 +66,5 @@
             </dependentAssembly>
         </assemblyBinding>
     </runtime>
-    <glimpse enabled="true" loggingEnabled="true" />
+    <glimpse enabled="true" loggingEnabled="false" />
 </configuration>
