HtmlHelper for creating input model forms

--- a/src/sdk/Euclid.Composites.Mvc/Euclid.Composites.Mvc.csproj
+++ b/src/sdk/Euclid.Composites.Mvc/Euclid.Composites.Mvc.csproj
@@ -109,6 +109,7 @@
     <Compile Include="ActionFilters\FormatPartMetadataAttribute.cs" />
     <Compile Include="ActionFilters\MetadataFormatterAttributeBase.cs" />
     <Compile Include="ActionFilters\CommandPublisherAttribute.cs" />
+    <Compile Include="Extensions\HtmlHelperExtensions.cs" />
     <Compile Include="Extensions\WindsorContainerExtensions.cs" />
     <Compile Include="Binders\AgentMetadataBinder.cs">
       <SubType>Code</SubType>
