--- a/apps/ForumComposite/Web.config
+++ b/apps/ForumComposite/Web.config
@@ -8,6 +8,9 @@
         <section name="glimpse" type="Glimpse.Core.Configuration.GlimpseConfiguration" />
     </configSections>
     <connectionStrings>
+        <!-- 
+            <add name="test-db" connectionString="Data Source=.\SQLExpress;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
+        -->
         <add name="test-db" connectionString="Data Source=.\SQLExpress;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
     </connectionStrings>
     <appSettings>
