composite inspector frame

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -32,4 +32,5 @@
   <repository path="..\src\sdk\PortableAgentPanel\packages.config" />
   <repository path="..\tests\Euclid.Sdk.NugetTests\packages.config" />
   <repository path="..\src\sdk\CompositeInspector\packages.config" />
+  <repository path="..\tests\Euclid.Sdk.TestAgent\packages.config" />
 </repositories>
