--- a/tests/Euclid.Sdk.TestAgent/packages.config
+++ b/tests/Euclid.Sdk.TestAgent/packages.config
@@ -3,4 +3,5 @@
   <package id="Iesi.Collections" version="3.2.0.4000" />
   <package id="NHibernate" version="3.2.0.4000" />
   <package id="FluentNHibernate" version="1.3.0.717" />
+  <package id="routedebugger" version="2.0.0.7" />
 </packages>
