--- a/src/connectionstring.config
+++ b/src/connectionstring.config
@@ -1,3 +1,3 @@
     <connectionStrings>
-        <add name="test-db" connectionString="Data Source=.\SQLExpress;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
+        <add name="test-db" connectionString="Data Source=.;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
     </connectionStrings>
