--- a/src/framework/Euclid.Framework.Cqrs.NHibernate/Euclid.Framework.Cqrs.NHibernate.csproj
+++ b/src/framework/Euclid.Framework.Cqrs.NHibernate/Euclid.Framework.Cqrs.NHibernate.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoMapperConfiguration.cs" />
+    <Compile Include="DefaultStringLengthConvention.cs" />
     <Compile Include="NhQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
