--- a/apps/ForumComposite/Web.config
+++ b/apps/ForumComposite/Web.config
@@ -11,8 +11,8 @@
         <!-- 
             <add name="test-db" connectionString="Data Source=.\SQLExpress;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
         -->
-        <add name="test-db" connectionString="Data Source=.;Initial Catalog=Forum-Db;Integrated Security=SSPI;Persist Security Info=False;" />
-    </connectionStrings>
+		<add name="test-db" connectionString="Data Source=.\SQLExpress;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
+	</connectionStrings>
     <appSettings>
         <add key="webpages:Version" value="1.0.0.0" />
         <add key="ClientValidationEnabled" value="true" />
