--- a/apps/ForumTests/ForumTests.csproj
+++ b/apps/ForumTests/ForumTests.csproj
@@ -109,7 +109,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="ForumCommenting.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>ForumCommenting.feature.cs</LastGenOutput>
