--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -33,4 +33,5 @@
   <repository path="..\tests\Euclid.Sdk.NugetTests\packages.config" />
   <repository path="..\src\sdk\CompositeInspector\packages.config" />
   <repository path="..\tests\Euclid.Sdk.TestAgent\packages.config" />
+  <repository path="..\sdk\LoggingAgent\packages.config" />
 </repositories>
