--- a/tests/Euclid.Sdk.TestComposite/Euclid.Sdk.TestComposite.csproj
+++ b/tests/Euclid.Sdk.TestComposite/Euclid.Sdk.TestComposite.csproj
@@ -178,6 +178,10 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\sdk\LoggingAgent\LoggingAgent.csproj">
+      <Project>{1FE538F6-D05D-4849-8741-F827F1B7B34F}</Project>
+      <Name>LoggingAgent</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\src\common\Euclid.Common.Configuration\Euclid.Common.Configuration.csproj">
       <Project>{B04EEAA1-7492-41B9-9CEA-1D961D9A8568}</Project>
       <Name>Euclid.Common.Configuration</Name>
@@ -205,6 +209,10 @@
     <ProjectReference Include="..\..\src\framework\Euclid.Framework.AgentMetadata\Euclid.Framework.AgentMetadata.csproj">
       <Project>{276664F8-43A3-43E6-AA9A-B9A275B14013}</Project>
       <Name>Euclid.Framework.AgentMetadata</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\src\framework\Euclid.Framework.Cqrs.NHibernate\Euclid.Framework.Cqrs.NHibernate.csproj">
+      <Project>{5A255BCD-5858-4CB3-BE76-177E65048D4F}</Project>
+      <Name>Euclid.Framework.Cqrs.NHibernate</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\src\framework\Euclid.Framework.Cqrs\Euclid.Framework.Cqrs.csproj">
       <Project>{58D2349E-9C39-485E-861E-E337ACF186B6}</Project>
