--- a/src/sdk/AgentConsole/app.config
+++ b/src/sdk/AgentConsole/app.config
@@ -10,11 +10,12 @@
 		<!-- 
             <add name="test-db" connectionString="Data Source=.\SQLExpress;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
         -->
-		<add name="test-db" connectionString="Data Source=.;Initial Catalog=Forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
+		<add name="test-db" connectionString="Data Source=.\SQLExpress;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
 		<add name="Sqlite_InMemory" providerName="System.Data.SQLite" connectionString="Data Source=:memory:;Version=3;New=True" />
 	</connectionStrings>
 	<appSettings>
 		<add key="DataConnectionString" value="UseDevelopmentStorage=true" />
+		<add key="log4net.Internal.Debug" value="false"/>
 	</appSettings>
 	<system.data>
 		<DbProviderFactories>
@@ -37,10 +38,11 @@
 			<priority value="INFO"/>
 			<appender-ref ref="Console"/>
 			<appender-ref ref="File"/>
+			<appender-ref ref="AdoNetAppender" />
 		</root>
 
 		<logger name="NHibernate">
-			<level value="WARN" />
+			<level value="ERROR" />
 		</logger>
 
 		<appender name="Console" type="log4net.Appender.ColoredConsoleAppender">
@@ -65,6 +67,70 @@
 			<layout type="log4net.Layout.PatternLayout">
 				<conversionPattern value="%d [%p] %c - %m%n" />
 			</layout>
+		</appender>
+
+		<appender name="AdoNetAppender" type="log4net.Appender.AdoNetAppender">
+			<bufferSize value="1" />
+			<connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+			<connectionString value="Data Source=.\SQLExpress;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
+			<commandText value="INSERT INTO LogEntry ([Date],[Thread],[Level],[Logger],[Message],[Exception],[Identifier],[Created],[Modified],[LoggingSource]) VALUES (@log_date, @thread, @log_level, @logger, @message, @exception,newid(),@created,@modified, 'Agent Console')" />
+			<parameter>
+				<parameterName value="@log_date" />
+				<dbType value="DateTime" />
+				<layout type="log4net.Layout.RawTimeStampLayout" />
+			</parameter>
+			<parameter>
+				<parameterName value="@thread" />
+				<dbType value="String" />
+				<size value="255" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%thread" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@log_level" />
+				<dbType value="String" />
+				<size value="50" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%level" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@logger" />
+				<dbType value="String" />
+				<size value="255" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%logger" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@message" />
+				<dbType value="String" />
+				<size value="4000" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%message" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@exception" />
+				<dbType value="String" />
+				<size value="2000" />
+				<layout type="log4net.Layout.ExceptionLayout" />
+			</parameter>
+			<parameter>
+				<parameterName value="@created" />
+				<dbType value="DateTime" />
+				<layout type="log4net.Layout.RawPropertyLayout">
+					<key value="Created" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@modified" />
+				<dbType value="DateTime" />
+				<layout type="log4net.Layout.RawPropertyLayout">
+					<key value="Modified" />
+				</layout>
+			</parameter>
 		</appender>
 
 	</log4net>
