--- a/tests/Euclid.Sdk.TestComposite/Web.config
+++ b/tests/Euclid.Sdk.TestComposite/Web.config
@@ -14,7 +14,7 @@
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
 		<add key="DataConnectionString" value="UseDevelopmentStorage=true" />
 		<add key="RouteDebugger:Enabled" value="false" />
-		<add key="log4net.Internal.Debug" value="true"/>
+		<add key="log4net.Internal.Debug" value="false"/>
     </appSettings>
 	<system.diagnostics>
 		<trace autoflush="true">
@@ -81,11 +81,15 @@
 			<appender-ref ref="AdoNetAppender" />
 		</root>
 
+		<logger name="NHibernate">
+			<level value="ERROR" />
+		</logger>
+		
 		<appender name="AdoNetAppender" type="log4net.Appender.AdoNetAppender">
 			<bufferSize value="1" />
 			<connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
 			<connectionString value="Data Source=.\SQLExpress;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
-			<commandText value="INSERT INTO LogEntry ([Date],[Thread],[Level],[Logger],[Message],[Exception],[Identifier],[Created],[Modified],[LoggingSource]) VALUES (@log_date, @thread, @log_level, @logger, @message, @exception,@identifier,@created,@modified,@loggingsource)" />
+			<commandText value="INSERT INTO LogEntry ([Date],[Thread],[Level],[Logger],[Message],[Exception],[Identifier],[Created],[Modified],[LoggingSource]) VALUES (@log_date, @thread, @log_level, @logger, @message, @exception,newid(),@created,@modified, 'Test Composite')" />
 			<parameter>
 				<parameterName value="@log_date" />
 				<dbType value="DateTime" />
@@ -130,13 +134,6 @@
 				<layout type="log4net.Layout.ExceptionLayout" />
 			</parameter>
 			<parameter>
-				<parameterName value="@identifier" />
-				<dbType value="Guid" />
-				<layout type="log4net.Layout.RawPropertyLayout">
-					<key value="Identifier" />
-				</layout>
-			</parameter>
-			<parameter>
 				<parameterName value="@created" />
 				<dbType value="DateTime" />
 				<layout type="log4net.Layout.RawPropertyLayout">
@@ -148,14 +145,6 @@
 				<dbType value="DateTime" />
 				<layout type="log4net.Layout.RawPropertyLayout">
 					<key value="Modified" />
-				</layout>
-			</parameter>
-			<parameter>
-				<parameterName value="@loggingsource" />
-				<dbType value="String" />
-				<size value="2000" />
-				<layout type="log4net.Layout.RawPropertyLayout">
-					<key value="LoggingSource" />
 				</layout>
 			</parameter>
 		</appender>
