--- a/apps/ForumComposite/Web.config
+++ b/apps/ForumComposite/Web.config
@@ -6,7 +6,8 @@
 <configuration>
     <configSections>
         <section name="glimpse" type="Glimpse.Core.Configuration.GlimpseConfiguration" />
-    </configSections>
+		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
+	</configSections>
     <connectionStrings>
         <!-- 
             <add name="test-db" connectionString="Data Source=.\SQLExpress;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
@@ -18,8 +19,9 @@
         <add key="ClientValidationEnabled" value="true" />
         <add key="UnobtrusiveJavaScriptEnabled" value="true" />
         <add key="DataConnectionString" value="UseDevelopmentStorage=true" />
-    </appSettings>
-    <system.web>
+		<add key="log4net.Internal.Debug" value="false"/>
+	</appSettings>
+	<system.web>
         <compilation debug="true" targetFramework="4.0">
             <assemblies>
                 <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
@@ -42,7 +44,7 @@
                 <add namespace="System.Web.WebPages" />
             </namespaces>
         </pages>
-        <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false" />
+        <trace writeToDiagnosticsTrace="true" enabled="false" pageOutput="false" />
         <httpModules>
             <add name="Glimpse" type="Glimpse.Core.Module" />
             <add name="PerRequestLifestyle" type="Castle.MicroKernel.Lifestyle.PerWebRequestLifestyleModule, Castle.Windsor" />
@@ -70,4 +72,65 @@
         </assemblyBinding>
     </runtime>
     <glimpse enabled="true" loggingEnabled="false" />
+
+	<log4net>
+		<root>
+			<priority value="DEBUG"/>
+			<appender-ref ref="AdoNetAppender" />
+		</root>
+
+		<logger name="NHibernate">
+			<level value="INFO" />
+		</logger>
+
+		<appender name="AdoNetAppender" type="log4net.Appender.AdoNetAppender">
+			<bufferSize value="1" />
+			<connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+			<connectionString value="Data Source=.\SQLExpress;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
+			<commandText value="INSERT INTO LogEntry ([Date],[Thread],[Level],[Logger],[Message],[Exception],[Identifier],[Created],[Modified],[LoggingSource]) VALUES (@log_date, @thread, @log_level, @logger, @message, @exception,newid(), getdate(), getdate(), 'Forum Composite')" />
+			<parameter>
+				<parameterName value="@log_date" />
+				<dbType value="DateTime" />
+				<layout type="log4net.Layout.RawTimeStampLayout" />
+			</parameter>
+			<parameter>
+				<parameterName value="@thread" />
+				<dbType value="String" />
+				<size value="255" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%thread" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@log_level" />
+				<dbType value="String" />
+				<size value="50" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%level" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@logger" />
+				<dbType value="String" />
+				<size value="255" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%logger" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@message" />
+				<dbType value="String" />
+				<size value="4000" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%message" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@exception" />
+				<dbType value="String" />
+				<size value="2000" />
+				<layout type="log4net.Layout.ExceptionLayout" />
+			</parameter>
+		</appender>
+	</log4net>
 </configuration>
