--- a/apps/AdminComposite/packages.config
+++ b/apps/AdminComposite/packages.config
@@ -4,4 +4,12 @@
   <package id="jQuery.Validation" version="1.8.1" />
   <package id="jQuery.UI.Combined" version="1.8.14" />
   <package id="jQuery" version="1.6.2" />
+  <package id="Iesi.Collections" version="3.2.0.4000" />
+  <package id="NHibernate" version="3.2.0.4000" />
+  <package id="FluentNHibernate" version="1.3.0.717" />
+  <package id="log4net" version="1.2.10" />
+  <package id="Castle.Core" version="2.5.2" />
+  <package id="Castle.Windsor" version="2.5.3" />
+  <package id="CommonServiceLocator" version="1.0" />
+  <package id="CommonServiceLocator.WindsorAdapter" version="1.0" />
 </packages>
