added "create a forum" to admin composite

--- a/src/sdk/Euclid.Composites.Mvc/Euclid.Composites.Mvc.csproj
+++ b/src/sdk/Euclid.Composites.Mvc/Euclid.Composites.Mvc.csproj
@@ -131,7 +131,7 @@
     <Compile Include="MvcCompositeApp.cs" />
     <Compile Include="Extensions\ControllerContextExtensions.cs" />
     <Compile Include="Extensions\RequiredRouteDataMissingException.cs" />
-    <Compile Include="Models\InputModelBase.cs" />
+    <Compile Include="Models\DefaultInputModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Binders\EuclidDefaultBinder.cs" />
     <Compile Include="Results\JsonNetResult.cs" />
