--- a/apps/ForumAgent/ForumAgent.csproj
+++ b/apps/ForumAgent/ForumAgent.csproj
@@ -53,8 +53,10 @@
   <ItemGroup>
     <Compile Include="AgentInfo.cs" />
     <Compile Include="Commands\CommentOnPost.cs" />
+    <Compile Include="Commands\CreateForum.cs" />
     <Compile Include="Commands\PublishPost.cs" />
     <Compile Include="Commands\RegisterUser.cs" />
+    <Compile Include="Processors\CreateForumProcessor.cs" />
     <Compile Include="Processors\RegisterUserProcessor.cs" />
     <Compile Include="Commands\UpdateUserProfile.cs" />
     <Compile Include="Processors\UpdateUserProfileProcessor.cs" />
@@ -66,9 +68,11 @@
     <Compile Include="Processors\VoteOnPostProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\CommentQueries.cs" />
+    <Compile Include="Queries\ForumQueries.cs" />
     <Compile Include="Queries\PostQueries.cs" />
     <Compile Include="Queries\UserQueries.cs" />
     <Compile Include="ReadModels\Comment.cs" />
+    <Compile Include="ReadModels\Forum.cs" />
     <Compile Include="ReadModels\Post.cs" />
     <Compile Include="ReadModels\PostDetail.cs" />
     <Compile Include="ReadModels\PostListing.cs" />
