--- a/src/sdk/Euclid.Composites/Euclid.Composites.csproj
+++ b/src/sdk/Euclid.Composites/Euclid.Composites.csproj
@@ -65,8 +65,9 @@
     <CodeAnalysisFailOnMissingRules>false</CodeAnalysisFailOnMissingRules>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AutoMapper">
-      <HintPath>..\..\..\packages\AutoMapper.1.1.0.118\lib\AutoMapper.dll</HintPath>
+    <Reference Include="AutoMapper, Version=2.0.0.232, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\packages\AutoMapper.2.0.0\lib\net40-client\AutoMapper.dll</HintPath>
     </Reference>
     <Reference Include="Castle.Core">
       <HintPath>..\..\..\packages\Castle.Core.2.5.2\lib\NET35\Castle.Core.dll</HintPath>
@@ -102,27 +103,26 @@
     <Compile Include="AgentResolution\AppDomainAgentResolver.cs" />
     <Compile Include="AgentResolution\FileSystemAgentResolver.cs" />
     <Compile Include="AgentResolution\IAgentResolver.cs" />
+    <Compile Include="Conversion\CommandAlreadyMappedException.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="CommandNotPresentInAgentException.cs" />
     <Compile Include="CompositeApplicationState.cs" />
     <Compile Include="CompositeAppSettings.cs" />
     <Compile Include="BasicCompositeApp.cs" />
-    <Compile Include="Conversion\InputModelToCommandTransformerRegistry.cs">
+    <Compile Include="Conversion\CannotCreateInputModelException.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Conversion\CannotMapCommandException.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Conversion\CommandNotRegisteredException.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Formatters\CompositeMetadataFormatter.cs" />
     <Compile Include="ICompositeApp.cs" />
     <Compile Include="InMemoryCommandPublicationRecordMapper.cs" />
-    <Compile Include="Conversion\AttemptingToRegisterInvalidCommandException.cs" />
-    <Compile Include="Conversion\AttemptingToRegisterInvalidInputModelTypeException.cs" />
-    <Compile Include="Conversion\CannotCreateCommandException.cs" />
-    <Compile Include="Conversion\CannotCreateInputModelException.cs" />
-    <Compile Include="Conversion\CannotMapCommandException.cs" />
-    <Compile Include="Conversion\CommandNotRegisteredException.cs" />
-    <Compile Include="Conversion\CommandAlreadyMappedException.cs" />
-    <Compile Include="Conversion\IInputModelTransformerRegistry.cs" />
-    <Compile Include="Conversion\IInputToCommandConverter.cs" />
-    <Compile Include="Conversion\PartNameAlreadyRegisteredException.cs" />
-    <Compile Include="Conversion\PartNameNotRegisteredException.cs" />
+    <Compile Include="Conversion\InputModelAlreadyRegisteredException.cs" />
     <Compile Include="InvalidCompositeApplicationStateException.cs" />
     <Compile Include="Extensions\AgentResolversExtensions.cs" />
     <Compile Include="InvalidConfigurationException.cs" />
