--- a/tests/Euclid.Sdk.Specifications/Euclid.Sdk.Specifications.csproj
+++ b/tests/Euclid.Sdk.Specifications/Euclid.Sdk.Specifications.csproj
@@ -32,8 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AutoMapper, Version=1.1.0.188, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\AutoMapper.1.1.0.118\lib\AutoMapper.dll</HintPath>
+    <Reference Include="AutoMapper, Version=2.0.0.232, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\AutoMapper.2.0.0\lib\net40-client\AutoMapper.dll</HintPath>
     </Reference>
     <Reference Include="Castle.Core, Version=2.5.1.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Castle.Core.2.5.2\lib\NET35\Castle.Core.dll</HintPath>
@@ -84,6 +85,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CompositeApplication\ConfigureAgentSteps.cs" />
+    <Compile Include="InputModelConversion\InputModelSteps.cs" />
+    <Compile Include="InputModelConversion\InputModelToCommandConversion.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>InputModelToCommandConversion.feature</DependentUpon>
+    </Compile>
+    <Compile Include="InputModelConversion\SpecCommand.cs" />
+    <Compile Include="InputModelConversion\SpecInputModel.cs" />
     <Compile Include="Metadata\Agent\AgentPartCollectionProvidesMetadata.cs" />
     <Compile Include="Metadata\Agent\AgentPartProvidesMetadata.cs" />
     <Compile Include="AppSettings\CompositeAppSettingsCanBeValidated.cs" />
@@ -126,6 +135,10 @@
     <None Include="AppSettings\CompositeSettingsCanBeValidated.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>CompositeSettingsCanBeValidated.feature.cs</LastGenOutput>
+    </None>
+    <None Include="InputModelConversion\InputModelToCommandConversion.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>InputModelToCommandConversion.feature.cs</LastGenOutput>
     </None>
     <None Include="Metadata\Agent\AgentMetadata.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
@@ -177,6 +190,10 @@
     <ProjectReference Include="..\..\src\framework\Euclid.Framework\Euclid.Framework.csproj">
       <Project>{8BA2EA0C-2220-4390-A87C-79E96E40DFD0}</Project>
       <Name>Euclid.Framework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\src\sdk\Euclid.Composites.Mvc\Euclid.Composites.Mvc.csproj">
+      <Project>{F0842E3B-1F25-4D42-B25D-758B8FCBDCC3}</Project>
+      <Name>Euclid.Composites.Mvc</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\src\sdk\Euclid.Composites\Euclid.Composites.csproj">
       <Project>{12029AA6-F05C-4DC6-B76E-C3798BCAC68D}</Project>
