wireframes corresponding to the sprint1 UI mockups (https://docs.google.com/presentation/d/1O-TL_rESrwEdaCzWCCTpjco2n-VU8ibnNRBQjv1yaOk/edit?hl=en_US#slide=id.g1733655_0_20)

--- a/apps/ForumAgent/ForumAgent.csproj
+++ b/apps/ForumAgent/ForumAgent.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Queries\UserQueries.cs" />
     <Compile Include="ReadModels\Comment.cs" />
     <Compile Include="ReadModels\Forum.cs" />
+    <Compile Include="ReadModels\Organization.cs" />
     <Compile Include="ReadModels\Post.cs" />
     <Compile Include="ReadModels\PostDetail.cs" />
     <Compile Include="ReadModels\PostListing.cs" />
