--- a/apps/AdminComposite/AdminComposite.csproj
+++ b/apps/AdminComposite/AdminComposite.csproj
@@ -119,18 +119,28 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\multiselect\jquery.multiselect.css" />
+    <Content Include="Content\multiselect\jquery.multiselect.min.js" />
+    <Content Include="Content\multiselect\prettify.css" />
+    <Content Include="Content\multiselect\prettify.js" />
+    <Content Include="Content\scripts.js" />
+    <Content Include="Content\multiselect\style.css" />
+    <Compile Include="Controllers\BadgeController.cs" />
     <Compile Include="Controllers\DashboardController.cs" />
     <Compile Include="Controllers\ForumController.cs" />
     <Compile Include="Controllers\ModerationController.cs" />
+    <Compile Include="Controllers\OrganizationController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\CreateForumInputModel.cs" />
+    <Compile Include="Models\CreateOrganizationUserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebRole.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\admin-styles.css" />
     <Content Include="Content\chromatron\css\colors.css" />
     <Content Include="Content\chromatron\css\jquery.datatables.css" />
     <Content Include="Content\chromatron\css\jquery.datepicker.css" />
@@ -166,6 +176,7 @@
     <Content Include="Content\chromatron\img\icons\ajax_loading_nested.gif" />
     <Content Include="Content\chromatron\img\icons\ajax_loading_red.gif" />
     <Content Include="Content\chromatron\img\icons\ajax_loading_red_nested.gif" />
+    <Content Include="Content\help_icon.png" />
     <Content Include="Content\chromatron\img\icons\icon_accordion-hover.png" />
     <Content Include="Content\chromatron\img\icons\icon_accordion-hover_nested.png" />
     <Content Include="Content\chromatron\img\icons\icon_accordion.png" />
@@ -318,7 +329,6 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
@@ -421,10 +431,43 @@
     <Content Include="Views\User\List.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Moderation\Comments.cshtml" />
+    <Content Include="Views\User\Signin.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Moderation\Posts.cshtml" />
+    <Content Include="Views\User\Signout.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Organization\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_NewOrganizationUser.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\LeftRail\_AnonymousUserNavigation.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_MyForums.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_NewForum.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_ModeratorPanel.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Badge\List.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Badge\_NewBadge.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Moderation\Moderation.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Forum\AuthenticationProviders.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Forum\ForumSettings.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
